# servicemp3amlogic

./: README.md  configure.ac
.github/workflows/: servicemp3amlogic.yml
CI/: build.sh
servicemp3/: codec.h  servicemp3.cpp  servicemp3.h
